# topsort

./: LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: main.yml
pytopsort/: __init__.py
tests/: test_topsort.py
