[tool.poetry]
name = "pytopsort"
version = "1.0.0"
description = "Python implementation of topological sort"
authors = ["Pavel Kulyov <kulyov.pavel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-coverage = "*"
pytest-mypy = "^0.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
